<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".formularioEmpresa">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="354dp"
        android:layout_height="325dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_nombreEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_nombreNombreEmpresa"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nombreEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/bordes"
            android:ems="10"
            android:hint="@string/et_nombreEmpresa"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:text="@string/txt_direccion"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/bordes"
            android:ems="10"
            android:hint="@string/et_direccion"
            android:inputType="textPersonName"
            android:linksClickable="false"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_telefonoEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:text="@string/txt_telefonoEmpresa"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_telefonoEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/bordes"
            android:ems="10"
            android:hint="@string/et_telefonoEmpresa"
            android:inputType="textPersonName"
            android:lineSpacingExtra="24sp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_sector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:text="@string/txt_sector"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_sector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/bordes"
            android:ems="10"
            android:hint="@string/et_sector"
            android:inputType="textPersonName"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="536dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_cancelar"
        android:textColor="@color/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_validar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_validar"
        android:textColor="@color/ic_launcher_background"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />
</androidx.constraintlayout.widget.ConstraintLayout>