<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formularioServicio">

    <Button
        android:id="@+id/btn_cancelar_servicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="30dp"
        android:onClick="cancelar"
        android:text="@string/btn_cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="348dp"
        android:layout_height="416dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="18dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_insertar_servicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_nombre_empresa_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/txt_nombreNombreEmpresa"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_contacto_servicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:fontFamily="sans-serif-black"
            android:text="@string/nombre_contacto"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinnerContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_direccion_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:fontFamily="sans-serif-black"
            android:text="@string/direccion_cliente"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_direccion_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/bordes"
            android:ems="10"
            android:hint="@string/campo"
            android:inputType="textPersonName"
            android:padding="2sp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_horas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:fontFamily="sans-serif-black"
            android:text="@string/horas"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_horas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/bordes"
            android:ems="10"
            android:hint="@string/campo"
            android:inputType="number"
            android:padding="2sp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_nombre_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:background="@color/background_color"
            android:fontFamily="sans-serif-black"
            android:text="@string/nombre_cliente"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nombre_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/bordes"
            android:ems="10"
            android:hint="@string/campo"
            android:inputType="textPersonName"
            android:padding="2sp"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_insertar_servicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="insertarServicio"
        android:text="@string/btn_home_insertar"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancelar_servicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>