<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".formularioContacto">

    <TextView
        android:id="@+id/titulo_formulario_contacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif"
        android:text="@string/titulo_formulario_contacto"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_insertar_contacto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/btn_home_nuevo"
        android:textColor="@color/ic_launcher_background"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancelar_contacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_formulario_contacto"
        app:layout_constraintVertical_bias="0.961" />

    <Button
        android:id="@+id/btn_cancelar_contacto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="44dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-black"
        android:text="@string/btn_cancelar"
        android:textColor="@color/ic_launcher_background"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="314dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_insertar_contacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_formulario_contacto"
        app:layout_constraintVertical_bias="0.396">

        <TextView
            android:id="@+id/tv_nombre_contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/nombre_contacto"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/et_nombre_contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/bordes"
            android:ems="10"
            android:fontFamily="cursive"
            android:hint="@string/campo"
            android:inputType="textPersonName"
            android:text="@string/campo"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv_telefono_contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/telefono_contacto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_telefono_contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/bordes"
            android:ems="10"
            android:fontFamily="cursive"
            android:hint="@string/campo"
            android:inputType="textPersonName"
            android:text="@string/campo"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv_cargo_contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/cargo_contacto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_cargo_contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/bordes"
            android:ems="10"
            android:fontFamily="cursive"
            android:hint="@string/campo"
            android:inputType="textPersonName"
            android:text="@string/campo"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv_email_contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/correo_contacto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_correo_contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/bordes"
            android:ems="10"
            android:fontFamily="cursive"
            android:hint="@string/campo"
            android:inputType="textEmailAddress"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>